{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 41,
  "lineage": "2f34d7ea-0082-6742-cc06-51801a87a40f",
  "resources": [
    {
      "module": "module.bastion_ec2_instance[\"bastion\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e28822503eeedddc",
            "arn": "arn:aws:ec2:ca-central-1:010759904348:instance/i-01226f03e671246e7",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01226f03e671246e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "mongo_pemkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02f5ac2f48647ed36",
            "private_dns": "ip-172-29-4-242.ca-central-1.compute.internal",
            "private_ip": "172.29.4.242",
            "public_ip": "35.183.68.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b654145996b9fec5",
                "volume_size": 15,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005d1e4c474498962",
            "tags": {
              "Environment": "dev",
              "Name": "instance-bastion"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "instance-bastion"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "instance-bastion"
            },
            "vpc_security_group_ids": [
              "sg-096c7d34f41c27bc9"
            ]
          },
          "dependencies": [
            "module.mongo_vpc.aws_subnet.public",
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongo_ec2_instance[\"mongo-001\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e28822503eeedddc",
            "arn": "arn:aws:ec2:ca-central-1:010759904348:instance/i-098c39c4bb989817a",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098c39c4bb989817a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "mongo_pemkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0718613aa3daefd12",
            "private_dns": "ip-172-29-1-118.ca-central-1.compute.internal",
            "private_ip": "172.29.1.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-03465f4dad8bd5d2e",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d4de34006a19f82",
            "tags": {
              "Environment": "dev",
              "Name": "instance-mongo-001"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "instance-mongo-001"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "instance-mongo-001"
            },
            "vpc_security_group_ids": [
              "sg-096c7d34f41c27bc9"
            ]
          },
          "dependencies": [
            "module.mongo_vpc.aws_subnet.private",
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongo_ec2_instance[\"mongo-002\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e28822503eeedddc",
            "arn": "arn:aws:ec2:ca-central-1:010759904348:instance/i-0f8a5327c0cd59659",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8a5327c0cd59659",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "mongo_pemkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08d793bbdd3eaade3",
            "private_dns": "ip-172-29-1-25.ca-central-1.compute.internal",
            "private_ip": "172.29.1.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-0109bd24ef1bddb70",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d4de34006a19f82",
            "tags": {
              "Environment": "dev",
              "Name": "instance-mongo-002"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "instance-mongo-002"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "instance-mongo-002"
            },
            "vpc_security_group_ids": [
              "sg-096c7d34f41c27bc9"
            ]
          },
          "dependencies": [
            "module.mongo_vpc.aws_subnet.private",
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongo_ec2_instance[\"mongo-003\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e28822503eeedddc",
            "arn": "arn:aws:ec2:ca-central-1:010759904348:instance/i-00ebabd69db98cc74",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ebabd69db98cc74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "mongo_pemkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-066509e3b3965cc2c",
            "private_dns": "ip-172-29-1-32.ca-central-1.compute.internal",
            "private_ip": "172.29.1.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-07c216470b795568a",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d4de34006a19f82",
            "tags": {
              "Environment": "dev",
              "Name": "instance-mongo-003"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "instance-mongo-003"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "instance-mongo-003"
            },
            "vpc_security_group_ids": [
              "sg-096c7d34f41c27bc9"
            ]
          },
          "dependencies": [
            "module.mongo_vpc.aws_subnet.private",
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongo_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:010759904348:security-group/sg-096c7d34f41c27bc9",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096c7d34f41c27bc9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.29.0.0/16"
                ],
                "description": "MongoDB Rule",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "default",
            "owner_id": "010759904348",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "default"
            },
            "vpc_id": "vpc-0df562cdfcd2a560f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mongo_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongo_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01c995a5a0b4d07c5",
            "domain": "vpc",
            "id": "eipalloc-0118bea9a1584eb0f",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-09dc2f0fe3d6b0198",
            "private_dns": "ip-172-29-4-80.ca-central-1.compute.internal",
            "private_ip": "172.29.4.80",
            "public_dns": "ec2-15-222-41-168.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.222.41.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "mongo_vpc-ca-central-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mongo_vpc-ca-central-1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.mongo_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:010759904348:internet-gateway/igw-0defb598576268674",
            "id": "igw-0defb598576268674",
            "owner_id": "010759904348",
            "tags": {
              "Environment": "dev",
              "Name": "mongo_vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mongo_vpc"
            },
            "vpc_id": "vpc-0df562cdfcd2a560f"
          },
          "dependencies": [
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongo_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0118bea9a1584eb0f",
            "connectivity_type": "public",
            "id": "nat-012987bfaca2f3326",
            "network_interface_id": "eni-09dc2f0fe3d6b0198",
            "private_ip": "172.29.4.80",
            "public_ip": "15.222.41.168",
            "subnet_id": "subnet-005d1e4c474498962",
            "tags": {
              "Environment": "dev",
              "Name": "mongo_vpc-ca-central-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mongo_vpc-ca-central-1a"
            }
          },
          "dependencies": [
            "module.mongo_vpc.aws_eip.nat",
            "module.mongo_vpc.aws_internet_gateway.this",
            "module.mongo_vpc.aws_subnet.public",
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongo_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-022786765a21893701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-012987bfaca2f3326",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-022786765a2189370",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mongo_vpc.aws_eip.nat",
            "module.mongo_vpc.aws_internet_gateway.this",
            "module.mongo_vpc.aws_nat_gateway.this",
            "module.mongo_vpc.aws_route_table.private",
            "module.mongo_vpc.aws_subnet.public",
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongo_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0defb598576268674",
            "id": "r-rtb-03a9ebf9ecc5154a51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a9ebf9ecc5154a5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mongo_vpc.aws_internet_gateway.this",
            "module.mongo_vpc.aws_route_table.public",
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongo_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:010759904348:route-table/rtb-022786765a2189370",
            "id": "rtb-022786765a2189370",
            "owner_id": "010759904348",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-012987bfaca2f3326",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "mongo_vpc-private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mongo_vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df562cdfcd2a560f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongo_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:010759904348:route-table/rtb-03a9ebf9ecc5154a5",
            "id": "rtb-03a9ebf9ecc5154a5",
            "owner_id": "010759904348",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0defb598576268674",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "mongo_vpc-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mongo_vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df562cdfcd2a560f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongo_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdf6d8bebee7fd77",
            "route_table_id": "rtb-022786765a2189370",
            "subnet_id": "subnet-02d4de34006a19f82"
          },
          "dependencies": [
            "module.mongo_vpc.aws_route_table.private",
            "module.mongo_vpc.aws_subnet.private",
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00169a9167e2365d0",
            "route_table_id": "rtb-022786765a2189370",
            "subnet_id": "subnet-094fb60ff2e82ba71"
          },
          "dependencies": [
            "module.mongo_vpc.aws_route_table.private",
            "module.mongo_vpc.aws_subnet.private",
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongo_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a07cb75eea20038",
            "route_table_id": "rtb-03a9ebf9ecc5154a5",
            "subnet_id": "subnet-005d1e4c474498962"
          },
          "dependencies": [
            "module.mongo_vpc.aws_route_table.public",
            "module.mongo_vpc.aws_subnet.public",
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d97cc3db1e05552",
            "route_table_id": "rtb-03a9ebf9ecc5154a5",
            "subnet_id": "subnet-0eef666f4f860f937"
          },
          "dependencies": [
            "module.mongo_vpc.aws_route_table.public",
            "module.mongo_vpc.aws_subnet.public",
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongo_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:010759904348:subnet/subnet-02d4de34006a19f82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "172.29.1.0/24",
            "id": "subnet-02d4de34006a19f82",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010759904348",
            "tags": {
              "Environment": "dev",
              "Name": "mongo_vpc-private-ca-central-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mongo_vpc-private-ca-central-1a"
            },
            "vpc_id": "vpc-0df562cdfcd2a560f"
          },
          "dependencies": [
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:010759904348:subnet/subnet-094fb60ff2e82ba71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "172.29.2.0/24",
            "id": "subnet-094fb60ff2e82ba71",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010759904348",
            "tags": {
              "Environment": "dev",
              "Name": "mongo_vpc-private-ca-central-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mongo_vpc-private-ca-central-1b"
            },
            "vpc_id": "vpc-0df562cdfcd2a560f"
          },
          "dependencies": [
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongo_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:010759904348:subnet/subnet-005d1e4c474498962",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "172.29.4.0/24",
            "id": "subnet-005d1e4c474498962",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010759904348",
            "tags": {
              "Environment": "dev",
              "Name": "mongo_vpc-public-ca-central-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mongo_vpc-public-ca-central-1a"
            },
            "vpc_id": "vpc-0df562cdfcd2a560f"
          },
          "dependencies": [
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:010759904348:subnet/subnet-0eef666f4f860f937",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "172.29.5.0/24",
            "id": "subnet-0eef666f4f860f937",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010759904348",
            "tags": {
              "Environment": "dev",
              "Name": "mongo_vpc-public-ca-central-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mongo_vpc-public-ca-central-1b"
            },
            "vpc_id": "vpc-0df562cdfcd2a560f"
          },
          "dependencies": [
            "module.mongo_vpc.aws_vpc.this",
            "module.mongo_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.mongo_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:010759904348:vpc/vpc-0df562cdfcd2a560f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.29.0.0/16",
            "default_network_acl_id": "acl-07e43319856d18ae5",
            "default_route_table_id": "rtb-0aae64f6e07d4a6e0",
            "default_security_group_id": "sg-096c7d34f41c27bc9",
            "dhcp_options_id": "dopt-0af96fcd1260cd865",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0df562cdfcd2a560f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0aae64f6e07d4a6e0",
            "owner_id": "010759904348",
            "tags": {
              "Environment": "dev",
              "Name": "mongo_vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mongo_vpc"
            }
          }
        }
      ]
    }
  ]
}